# vyrn

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
docs/: prd.md
docs/architecture/: architecture.md
docs/branding/: README.md  style-guide.md
docs/official/: agents.md  community.md  index.md  package-lock.json  package.json  roadmap.md
docs/official/.vitepress/: config.mts
docs/official/.vitepress/components/: ReleasesList.vue
docs/official/.vitepress/theme/: index.ts  style.css
docs/official/commands/: index.md  session.md  slash-commands.md
docs/official/concepts/: architecture.md  context-management.md  core-tools.md  skills-and-mcp.md  token-savings.md
docs/official/getting-started/: first-run.md  index.md  installation.md
docs/official/releases/: index.md
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs  vision.rs
src/agent/: context.rs  loop.rs  mod.rs  prompt.rs  tokens.rs  transcript.rs
src/config/: mod.rs  models.rs  paths.rs
src/llm/: mod.rs  openai.rs  stream.rs  types.rs
src/mcp/: config.rs  mod.rs
src/skills/: discovery.rs  mod.rs  skill.rs
src/tools/: batch.rs  core.rs  file.rs  image.rs  manifest.rs  mod.rs
src/tui/: mod.rs  render.rs  repl.rs
tests/: cli.rs  config_loading.rs  context_manager.rs  e2e_repl.rs  manifest.rs  prompt.rs  tool_executor.rs  vision.rs
