[package]
name = "vyrn"
version = "0.1.0"
edition = "2024"
description = "A token-efficient Rust CLI agent for local and small OpenAI-compatible models."
license = "MIT"
repository = "https://github.com/BrunoV21/vyrn"

[dependencies]
anyhow = "1.0"
arboard = "3.6"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["bracketed-paste", "event-stream"] }
directories = "6.0"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "time"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3.23"
